[package]
name = "testhash"
version = "0.1.0"
authors = ["Petter <petter.egesund@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.async-std]
version = "1.5.0"
features = ["unstable", "attributes"]

[dependencies.rocksdb]
default-features = false
features = ["lz4"]

[dependencies]
hashbrown = "0.3"
im = { version = "*", features = ["proptest", "serde"] }
fnv = "1.0.3"
rand = "0.6.5"
threadpool = "1.8.0"
# futures = "0.3.4"
actix-web = "4"
actix-rt = "2.8.0"
duplicate = "0.2.1"
# rocksdb = "0.2.01"
float-cmp = "0.8.0"
num = "0.1.31"
num-traits = "0.2"
num-derive = "0.3"
byte_array = { path = "/home/petter/dev/rust/byte-array", version = "0.1.5" }
once_cell = "1.13.0"
enum_dispatch = "0.3.8"



[profile.release]
opt-level = 3

[profile.dev]
opt-level = 1
