[package]
name = "testhash"
version = "0.1.0"
authors = ["Petter <petter.egesund@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.6.5"
duplicate = "1.0.0"
float-cmp = "0.8.0"
num = "0.1.31"
num-traits = "0.2"
num-derive = "0.3"
byte_array = { git = "https://github.com/pegesund/byte-array.git", version = "0.1.5" }
rocksdb = { git = "https://github.com/pegesund/rust-rocksdb.git", default-features = false, features = ["lz4"], version="0.20.1" }
enum_dispatch = "0.3.8"
actix-web = "4"


[profile.release]
opt-level = 3

[profile.dev]
opt-level = 1
